# bqst

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  TRADEMARKS.md
docs/: build-notes.md  design.md  manual.md  project-plan.md
experiments/: density_reference_probe.py  procedural-knob-realism-pass.html  procedural-knob-saved.html  procedural-knob.html
packaging/: README.md
packaging/macos/: Distribution.xml
packaging/macos/resources/: ReadMe.html  Welcome.html
packaging/windows/: BQST.iss
scripts/: build-macos-release.sh  check.sh  install-local.sh  package-macos.sh  package-windows.ps1
src/: BqtDsp.h  BqtEditorInteraction.cpp  BqtEditorLayout.cpp  BqtEditorPresets.cpp  BqtEditorStyle.h  BqtEditorWidgets.cpp  BqtEditorWidgets.h  BqtParameterLayout.cpp  BqtPresetManager.cpp  BqtPresetManager.h  BqtProcessorDsp.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: dsp_tests.cpp
tools/: calibrate_autogain.py
